compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__doesnt_issue_special_error_for_pythonic_import_if_slash.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1911
expression: import one/two.three
snapshot_kind: text
---
----- SOURCE CODE
import one/two.three

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:16
  │
1 │ import one/two.three
  │                ^^^^^ I was not expecting this

Found a name, expected one of: 
- `{`
